@@ -171,9 +171,9 @@ class SC_mod_tools_em_xmlhandler {
 	/**
 	 * Enter description here...
 	 *
-	 * @param	unknown_type		$extKey
-	 * @param	[type]		$version: ...
-	 * @return	[type]		...
+	 * @param	string		$extKey
+	 * @param	string		$version: ...
+	 * @return	integer		Review state, if none is set 0 is returned as default.
 	 */
 	function getReviewState($extKey, $version) {
 		if(!is_array($this->reviewStates)) $this->loadReviewStates();
